# openlte

./: .gitignore  CMakeLists.txt  README
cmake/Modules/: FindMbedTLS.cmake
liblte/: CMakeLists.txt
liblte/hdr/: liblte_describe.h  liblte_mme.h
liblte/src/: liblte_describe.cc  liblte_mme.cc  liblte_security.cc
liblte/standalone/: CMakeLists.txt
